--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -2,6 +2,8 @@ body {
     background-color: #FFFFFF;
     color: #333333;
     font-family: 'Helvetica Neue', Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -42,6 +44,11 @@ h2 {
     color: #FDB515; /* Berkeley Gold */
 }
 
+h3 {
+    color: #003262; /* Berkeley Blue */
+    margin-top: 20px;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
@@ -70,4 +77,32 @@ footer {
     position: fixed;
     width: 100%;
     bottom: 0;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+ul li {
+    padding-left: 20px;
+    position: relative;
+}
+
+ul li:before {
+    content: "•";
+    color: #FDB515; /* Berkeley Gold */
+    font-weight: bold;
+    display: inline-block;
+    width: 1em;
+    margin-left: -1em;
+}
+
+section {
+    margin-bottom: 40px;
+}
+
+section p {
+    margin-bottom: 10px;
+    line-height: 1.6;
 }
