--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -3,6 +3,9 @@ body {
     color: #000000;
     font-family: Arial, sans-serif;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 header {
@@ -24,8 +27,8 @@ header a {
 }
 
 main {
+    flex: 1; /* Allows main content to grow and take up the available space */
     padding: 20px;
-    padding-bottom: 150px; /* Increase this value */
 }
 
 section h2 {
@@ -42,7 +45,9 @@ footer {
     color: #FFFFFF;
     text-align: center;
     padding: 10px 0;
-    position: fixed;
-    width: 100%;
+    position: relative;
     bottom: 0;
+    width: 100%;
+    height: 50px; /* Height of the footer */
+    clear: both;
 }
