--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -3,9 +3,6 @@ body {
     color: #000000;
     font-family: Arial, sans-serif;
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
 }
 
 header {
@@ -27,8 +24,9 @@ header a {
 }
 
 main {
-    flex: 1; /* Allows main content to grow and take up the available space */
     padding: 20px;
+    margin-bottom: 150px; /* Added margin-bottom to push the footer down */
+    min-height: calc(100vh - 150px); /* Ensure main takes full height minus footer */
 }
 
 section h2 {
@@ -45,9 +43,7 @@ footer {
     color: #FFFFFF;
     text-align: center;
     padding: 10px 0;
-    position: relative;
-    bottom: 0;
+    position: relative; /* Change from fixed to relative */
     width: 100%;
-    height: 50px; /* Height of the footer */
-    clear: both;
+    bottom: 0;
 }
