--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -14,11 +14,15 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 }
 
 header .logo img {
-    height: 50px;
+    height: 60px;
     margin-left: 20px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
 }
 
 header nav {
