--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -13,20 +13,21 @@ header {
     text-align: center;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     position: relative;
 }
 
 header .logo img {
     height: 60px;
-    margin-left: 20px;
     position: absolute;
-    top: 10px;
     left: 10px;
+    top: 10px;
 }
 
 header nav {
-    margin-right: 20px;
+    display: flex;
+    justify-content: space-around;
+    width: 80%;
 }
 
 header nav a {
