--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -56,11 +56,13 @@ main {
 
 h2 {
     color: #FDB515; /* Berkeley Gold */
+    padding-left: 20px; /* Add padding to indent the title */
 }
 
 h3 {
     color: #003262; /* Berkeley Blue */
     margin-top: 20px;
+    padding-left: 20px; /* Add padding to indent the title */
 }
 
 table {
@@ -119,4 +121,13 @@ section {
 section p {
     margin-bottom: 10px;
     line-height: 1.6;
+    padding-left: 20px; /* Add padding to indent the text */
+}
+
+section ul {
+    padding-left: 40px; /* Add padding to indent the list items */
+}
+
+section ul ul {
+    padding-left: 20px; /* Indent nested list items less */
 }
