--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -51,18 +51,18 @@ header nav a:hover {
 
 /* Ensure the main content doesn't overlap with the header */
 main {
-    padding: 20px 60px; /* Increase padding here to indent the main content more */
+    padding-top: 80px; /* Should match the header height */
 }
 
 h2 {
     color: #FDB515; /* Berkeley Gold */
-    padding-left: 40px; /* Increase padding to indent the title more */
+    padding-left: 20px; /* Add padding to indent the title */
 }
 
 h3 {
     color: #003262; /* Berkeley Blue */
     margin-top: 20px;
-    padding-left: 40px; /* Increase padding to indent the title more */
+    padding-left: 20px; /* Add padding to indent the title */
 }
 
 table {
@@ -101,7 +101,7 @@ ul {
 }
 
 ul li {
-    padding-left: 30px; /* Increase padding for list items */
+    padding-left: 20px;
     position: relative;
 }
 
@@ -121,13 +121,13 @@ section {
 section p {
     margin-bottom: 10px;
     line-height: 1.6;
-    padding-left: 40px; /* Increase padding to indent the text more */
+    padding-left: 20px; /* Add padding to indent the text */
 }
 
 section ul {
-    padding-left: 60px; /* Increase padding for list items in sections */
+    padding-left: 40px; /* Add padding to indent the list items */
 }
 
 section ul ul {
-    padding-left: 40px; /* Increase padding for nested list items */
+    padding-left: 20px; /* Indent nested list items less */
 }
