--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -90,7 +90,7 @@ footer {
     color: #FFFFFF;
     text-align: center;
     padding: 10px 0;
-    position: fixed;
+    position: relative;
     width: 100%;
     bottom: 0;
 }
