--- a/docs/css/resume.css
+++ b/docs/css/resume.css
@@ -4,6 +4,7 @@ body, html {
     height: 100%;
     display: flex;
     flex-direction: column;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
 header {
