--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,9 +1,10 @@
-body {
-    background-color: #FFFFFF;
-    color: #333333;
-    font-family: 'Helvetica Neue', Arial, sans-serif;
+body, html {
     margin: 0;
     padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
 header {
