--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -13,7 +13,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: relative;
+    position: fixed;
     height: 80px; /* Adjust as needed */
 }
 
@@ -52,7 +52,6 @@ header nav a:hover {
 /* Ensure the main content doesn't overlap with the header */
 main {
     padding-top: 80px; /* Should match the header height */
-    margin-top: 0; /* Remove any margin that might cause gaps */
 }
 
 h2 {
@@ -117,14 +116,12 @@ ul li:before {
 
 section {
     margin-bottom: 40px;
-    margin-top: 0; /* Remove top margin to eliminate gaps */
 }
 
 section p {
     margin-bottom: 10px;
     line-height: 1.6;
     padding-left: 20px; /* Add padding to indent the text */
-    margin-top: 0; /* Remove any margin that might cause gaps */
 }
 
 section ul {
