--- a/docs/css/resume.css
+++ b/docs/css/resume.css
@@ -1,24 +1,21 @@
-body {
-    background-color: #FFFFFF;
-    color: #333333;
-    font-family: 'Helvetica Neue', Arial, sans-serif;
+body, html {
     margin: 0;
     padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
 header {
-    background-color: #003262; /* Restore Berkeley Blue background */
+    background-color: #003262; /* Berkeley Blue background */
     color: #FFFFFF;
     padding: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: fixed;
+    position: relative;
     height: 80px; /* Adjust as needed */
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000;
 }
 
 header .logo {
@@ -47,46 +44,27 @@ header nav a {
     text-decoration: none;
     margin: 0 15px;
     font-weight: bold;
+    font-family: 'Helvetica Neue', Arial, sans-serif; /* Match font family */
+    font-size: 16px; /* Adjust font size if necessary */
 }
 
 header nav a:hover {
     text-decoration: underline;
 }
 
-/* Ensure the main content doesn't overlap with the header */
 main {
-    padding-top: 80px; /* Should match the header height */
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFFFF;
+    height: calc(100% - 80px); /* Full height minus the header height */
 }
 
-h2 {
-    color: #FDB515; /* Berkeley Gold */
-    padding-left: 20px; /* Add padding to indent the title */
-}
-
-h3 {
-    color: #003262; /* Berkeley Blue */
-    margin-top: 20px;
-    padding-left: 20px; /* Add padding to indent the title */
-}
-
-table {
+iframe {
     width: 100%;
-    border-collapse: collapse;
-    margin: 20px 0;
-}
-
-table, th, td {
-    border: 1px solid #DDD;
-}
-
-th, td {
-    padding: 10px;
-    text-align: left;
-}
-
-th {
-    background-color: #003262; /* Berkeley Blue */
-    color: #FFFFFF;
+    height: 100%;
+    border: none;
 }
 
 footer {
@@ -94,44 +72,7 @@ footer {
     color: #FFFFFF;
     text-align: center;
     padding: 10px 0;
-    position: relative;
+    position: fixed;
     width: 100%;
     bottom: 0;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-ul li {
-    padding-left: 20px;
-    position: relative;
-}
-
-ul li:before {
-    content: "•";
-    color: #FDB515; /* Berkeley Gold */
-    font-weight: bold;
-    display: inline-block;
-    width: 1em;
-    margin-left: -1em;
-}
-
-section {
-    margin-bottom: 40px;
-}
-
-section p {
-    margin-bottom: 10px;
-    line-height: 1.6;
-    padding-left: 20px; /* Add padding to indent the text */
-}
-
-section ul {
-    padding-left: 40px; /* Add padding to indent the list items */
-}
-
-section ul ul {
-    padding-left: 20px; /* Indent nested list items less */
 }
