--- a/docs/css/resume.css
+++ b/docs/css/resume.css
@@ -76,3 +76,13 @@ footer {
     width: 100%;
     bottom: 0;
 }
+
+.logo-link {
+    display: block;
+    height: 100%;
+    text-decoration: none;
+}
+
+.logo-link:hover {
+    text-decoration: none;
+}
