--- a/docs/css/resume.css
+++ b/docs/css/resume.css
@@ -14,8 +14,13 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: relative;
+    position: fixed;
     height: 80px; /* Adjust as needed */
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+}
 }
 
 header .logo {
