--- a/docs/css/resume.css
+++ b/docs/css/resume.css
@@ -1,10 +1,9 @@
-body, html {
+body {
+    background-color: #FFFFFF;
+    color: #333333;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
     margin: 0;
     padding: 0;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
 header {
